--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ billiard==3.5.0.2
 celery==4.0.2
 decorator==4.0.11
 Django==1.11.2
+django-celery-beat==1.0.1
 django-extensions==1.7.9
 django-filter==1.0.4
 django-model-utils==3.0.0
